--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,31 +1,38 @@
+# Scala CircleCI 2.0 configuration file
+#
+# Check https://circleci.com/docs/2.0/sample-config/ for more details
+#
 version: 2
-
 jobs:
   build:
-    working_directory: ~/sbt-docker
     docker:
+      # specify the version you desire here
       - image: circleci/openjdk:11-jdk
 
+    working_directory: ~/repo
+
+    environment:
+      # Customize the JVM maximum heap limit
+      JVM_OPTS: -Xmx3200m
+      TERM: dumb
+
     steps:
+      - checkout
       - setup_remote_docker
 
-      - checkout
+      - run: docker-compose up -d
 
+      # Download and cache dependencies
       - restore_cache:
           keys:
-            - sbt-cache-{{ checksum "build.sbt" }}
-
-
-      - run: |
-          docker-compose up -d
-          sbt ";clean;test;coverageReport;coverageAggregate;exit"
-
+            - v1-dependencies-{{ checksum "build.sbt" }}
+            # fallback to using the latest cache if no exact match is found
+            - v1-dependencies-
 
       - save_cache:
-          key: sbt-cache-{{ checksum "build.sbt" }}
           paths:
-            - ~/.sbt/boot
-            - ~/.sbt/preloaded
-            - ~/.ivy2
+            - ~/.m2
+          key: v1-dependencies--{{ checksum "build.sbt" }}
 
-      - run: bash <(curl -s https://codecov.io/bash)
+      # run tests!
+      - run: sbt ";clean;test;coverageReport;coverageAggregate;exit"
