--- a/.travis.yml
+++ b/.travis.yml
@@ -52,9 +52,4 @@ jobs:
     - stage: release
       if: tag IS present
       script:
-        - set -e
-        - git fetch --tags
-        - echo -n "$PGP_PUBLIC" | base64 -d > /tmp/public.asc
-        - echo -n "$PGP_SECRET" | base64 -d > /tmp/secret.asc
-        - echo "credentials += Credentials(\"Sonatype Nexus Repository Manager\", \"oss.sonatype.org\", \"$SONATYPE_USER\", \"$SONATYPE_PASSWORD\")" > ~/.sbt/1.0/sonatype.sbt
-        - sbt ++$TRAVIS_SCALA_VERSION! clean sonatypeBundleClean +publishSigned sonatypeBundleRelease
+        - ./release.sh
