--- a/.travis.yml
+++ b/.travis.yml
@@ -21,35 +21,39 @@ cache:
     - $HOME/.ivy2/cache
     - $HOME/.sbt
 
-
-
 jobs:
   include:
-    - stage: lint
-      script: sbt ++$TRAVIS_SCALA_VERSION! check
-
-    - &build-test
-      stage: build & test
-      jdk: openjdk11
-      scala: 2.13.1
-      script:
-        - set -e
-        - docker-compose up -d
-        - sbt ++$TRAVIS_SCALA_VERSION! coverage test coverageReport coverageAggregate
-
-    - <<: *build-test
-      jdk: openjdk8
-      scala: 2.13.1
-
-    - <<: *build-test
-      jdk: openjdk11
-      scala: 2.12.10
-
-    - <<: *build-test
-      jdk: openjdk11
-      scala: 2.12.10
+#    - stage: lint
+#      script: sbt ++$TRAVIS_SCALA_VERSION! check
+#
+#    - &build-test
+#      stage: build & test
+#      jdk: openjdk11
+#      scala: 2.13.1
+#      script:
+#        - set -e
+#        - docker-compose up -d
+#        - sbt ++$TRAVIS_SCALA_VERSION! coverage test coverageReport coverageAggregate
+#
+#    - <<: *build-test
+#      jdk: openjdk8
+#      scala: 2.13.1
+#
+#    - <<: *build-test
+#      jdk: openjdk11
+#      scala: 2.12.10
+#
+#    - <<: *build-test
+#      jdk: openjdk11
+#      scala: 2.12.10
 
     - stage: release
       if: tag IS present
       script:
-        - ./release.sh
+        - set -e
+        - base64 --version
+        - git fetch --tags
+        - echo -n "$PGP_PUBLIC" | base64 -d > /tmp/public.asc
+        - echo -n "$PGP_SECRET" | base64 -d > /tmp/secret.asc
+        - echo "credentials += Credentials(\"Sonatype Nexus Repository Manager\", \"oss.sonatype.org\", \"$SONATYPE_USER\", \"$SONATYPE_PASSWORD\")" > ~/.sbt/1.0/sonatype.sbt
+        - sbt ++$TRAVIS_SCALA_VERSION! clean sonatypeBundleClean +publishSigned sonatypeBundleRelease
