--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,14 @@ services:
       - ./ftp-home/sftp/home/foo:/home/foo
     command: foo:foo:2000:2000
 
+  sftp-sshkey:
+    image: atmoz/sftp:latest
+    ports:
+      - "3333:22"
+    volumes:
+      - ./src/test/resources/ssh_host_rsa_key.pub:/home/fooz/.ssh/keys/id_rsa.pub:ro
+    command: fooz::1001
+
   ftp:
     image: stilliard/pure-ftpd:latest
     ports:
