Add metals support in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,11 @@ lib_managed/
 src_managed/
 project/boot/
 project/plugins/project/
+project/metals.sbt
 .history
 .cache
 .lib/
 .DS_Store
+
+.metals/
+.bloop/
