--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         scala: [3.1.0, 2.13.7, 2.12.15]
-        java: [graalvm-ce-java11@20.3.0]
+        java: [graal_20.3.1@11]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout current branch (full)
@@ -36,10 +36,12 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Setup Java and Scala
-        uses: olafurpg/setup-scala@v13
+      - name: Setup GraalVM (graal_20.3.1@11)
+        if: matrix.java == 'graal_20.3.1@11'
+        uses: DeLaGuardo/setup-graalvm@5.0
         with:
-          java-version: ${{ matrix.java }}
+          graalvm: 20.3.1
+          java: java11
 
       - name: Cache sbt
         uses: actions/cache@v2
@@ -81,7 +83,7 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         scala: [3.1.0]
-        java: [graalvm-ce-java11@20.3.0]
+        java: [graal_20.3.1@11]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout current branch (full)
@@ -89,10 +91,12 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Setup Java and Scala
-        uses: olafurpg/setup-scala@v13
+      - name: Setup GraalVM (graal_20.3.1@11)
+        if: matrix.java == 'graal_20.3.1@11'
+        uses: DeLaGuardo/setup-graalvm@5.0
         with:
-          java-version: ${{ matrix.java }}
+          graalvm: 20.3.1
+          java: java11
 
       - name: Cache sbt
         uses: actions/cache@v2
